# Bookstore

./: README.md  Readme  db.sqlite3  pyproject.toml  settings.py
Pasta_1/: db.sqlite3  manage.py
Pasta_1/bookstore/: settings.py  urls.py
Pasta_1/order/: apps.py
Pasta_1/order/models/: order.py
Pasta_1/order/serializers/: order_serializer.py
Pasta_1/order/tests/tests_viewsets/: test_order_viewset.py
Pasta_1/order/viewsets/: order_viewset.py
Pasta_1/product/: apps.py
Pasta_1/product/models/: product.py
Pasta_1/product/serializers/: product_serializer.py
Pasta_1/product/tests/tests_viewsets/: test_category_viewset.py
Pasta_1/product/viewsets/: category_viewset.py  product_viewset.py
bookstore/: settings.py
order/: tests.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializers.py
product/migrations/: 0001_initial.py
product/serializers/: product_serializers.py
