[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Thiago Batista <thiagobatista15390@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pytest = "^8.3.5"
factory-boy = "^3.3.3"
django = ">=3.2,<4.0"
djangorestframework = ">=3.12,<3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
