[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Thiago Batista <thiagobatista15390@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pytest = "^8.3.5"
factory-boy = "^3.3.3"
django = ">=4.2,<5.0"
djangorestframework = "^3.16.0"
django-extensions = "^4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
